[gd_scene load_steps=5 format=3 uid="uid://opwt8f7pgv48"]

[ext_resource type="Script" uid="uid://bd1u42b8scayx" path="res://gui.gd" id="1_80edf"]
[ext_resource type="PackedScene" uid="uid://de78u6sepvyir" path="res://ball.tscn" id="2_6lon5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80edf"]
size = Vector2(640, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6lon5"]
size = Vector2(8, 376)

[node name="GUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0
script = ExtResource("1_80edf")

[node name="ArenaUI" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DescriptionPlayerOne" type="Label" parent="ArenaUI"]
layout_mode = 0
offset_left = 128.0
offset_right = 190.0
offset_bottom = 23.0
text = "Player 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionPlayerTwo" type="Label" parent="ArenaUI"]
layout_mode = 0
offset_left = 448.0
offset_right = 510.0
offset_bottom = 24.0
text = "Computer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScorePlayerOne" type="Label" parent="ArenaUI"]
layout_mode = 0
offset_right = 16.0
offset_bottom = 23.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScorePlayerTwo" type="Label" parent="ArenaUI"]
layout_mode = 0
offset_left = 624.0
offset_right = 640.0
offset_bottom = 23.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="Control" parent="."]
anchors_preset = 0
offset_left = 280.0
offset_top = 144.0
offset_right = 320.0
offset_bottom = 184.0

[node name="ColorRect2" type="ColorRect" parent="Menu"]
layout_mode = 0
offset_left = -280.0
offset_top = -144.0
offset_right = 360.0
offset_bottom = 216.0
color = Color(0.56078434, 0.56078434, 0.56078434, 0.83137256)

[node name="TitleWall" type="StaticBody2D" parent="Menu"]
position = Vector2(-280, -144)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2DTop" type="CollisionShape2D" parent="Menu/TitleWall"]
position = Vector2(320, -5)
shape = SubResource("RectangleShape2D_80edf")

[node name="CollisionShape2DBottom" type="CollisionShape2D" parent="Menu/TitleWall"]
position = Vector2(320, 364)
shape = SubResource("RectangleShape2D_80edf")

[node name="CollisionShape2DLeft" type="CollisionShape2D" parent="Menu/TitleWall"]
position = Vector2(-4, 180)
shape = SubResource("RectangleShape2D_6lon5")

[node name="CollisionShape2DRight" type="CollisionShape2D" parent="Menu/TitleWall"]
position = Vector2(644, 180)
shape = SubResource("RectangleShape2D_6lon5")

[node name="Ball" parent="Menu/TitleWall" instance=ExtResource("2_6lon5")]
collision_layer = 4
collision_mask = 4

[node name="Title" type="Label" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -68.0
offset_right = 57.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Pong"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="Menu"]
layout_mode = 0
offset_left = -32.0
offset_top = 8.0
offset_right = 112.0
offset_bottom = 39.0
text = "Start"

[node name="OptionButton" type="OptionButton" parent="Menu"]
layout_mode = 0
offset_left = -32.0
offset_top = 88.0
offset_right = 112.0
offset_bottom = 119.0
alignment = 1
selected = 0
allow_reselect = true
item_count = 2
popup/item_0/text = "Singleplayer"
popup/item_0/id = 0
popup/item_1/text = "Multiplayer"
popup/item_1/id = 1

[node name="WinConditionButton" type="OptionButton" parent="Menu"]
layout_mode = 0
offset_left = -32.0
offset_top = 48.0
offset_right = 112.0
offset_bottom = 79.0
selected = 0
item_count = 3
popup/item_0/text = "Goals to win: 5"
popup/item_0/id = 0
popup/item_1/text = "Goals to win: 3"
popup/item_1/id = 1
popup/item_2/text = "Goals to win: 7"
popup/item_2/id = 2

[node name="QuitButton" type="Button" parent="Menu"]
layout_mode = 0
offset_left = -32.0
offset_top = 128.0
offset_right = 112.0
offset_bottom = 160.0
text = "Quit"

[node name="DifficultyButton" type="OptionButton" parent="Menu"]
layout_mode = 0
offset_left = 120.0
offset_top = 88.0
offset_right = 217.0
offset_bottom = 120.0
alignment = 1
selected = 0
item_count = 3
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2

[node name="ScoreScreen" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="ScoreScreen"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.56078434, 0.56078434, 0.56078434, 0.83137256)

[node name="Label" type="Label" parent="ScoreScreen"]
layout_mode = 0
offset_left = 208.0
offset_top = 168.0
offset_right = 424.0
offset_bottom = 213.0
theme_override_font_sizes/font_size = 32
text = "Player 1 wins!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseMenu" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.56078434, 0.56078434, 0.56078434, 0.83137256)

[node name="Pause" type="Label" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 252.0
offset_top = 76.0
offset_right = 345.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 272.0
offset_top = 152.0
offset_right = 368.0
offset_bottom = 183.0
text = "Resume"

[node name="RestartButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 272.0
offset_top = 192.0
offset_right = 368.0
offset_bottom = 223.0
text = "Restart"

[node name="EndButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 272.0
offset_top = 232.0
offset_right = 368.0
offset_bottom = 263.0
text = "Main Menu"

[node name="CountDown" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="ColorRect" type="ColorRect" parent="CountDown"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.56078434, 0.56078434, 0.56078434, 0.83137256)

[node name="CountDownLabel" type="Label" parent="CountDown"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountDownTimer" type="Timer" parent="CountDown"]

[connection signal="pressed" from="Menu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="item_selected" from="Menu/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="Menu/WinConditionButton" to="." method="_on_win_condition_button_item_selected"]
[connection signal="pressed" from="Menu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="item_selected" from="Menu/DifficultyButton" to="." method="_on_difficulty_button_item_selected"]
[connection signal="pressed" from="PauseMenu/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseMenu/EndButton" to="." method="_on_end_button_pressed"]
